--- a/web/style.css
+++ b/web/style.css
@@ -14,17 +14,15 @@ body {
     background-color: #322b38;
 }
 .header {
-    display:flex;
+    display: flex;
     align-items: center;
-    gap: 10px;
+    flex-wrap: wrap;
+
+    padding: 10px 20px;
 
     background-image: url("./imgs/header_bg.png");
     background-size: 101% 101%;
-    background-repeat: no-repeat;
     background-position: center;
-
-    height: 15vh;
-    width: 100%;
 }
 .header-icon { 
     margin-left: 1rem;
@@ -41,29 +39,22 @@ h1 {
 }
 h2 {
     padding-top: 10px;
-    margin: 0;
-    color: white;;
-    font-size: 1rem;
-    font-family: "PixelFont";
-}
-h3{
+    padding-right: clamp(30px, 1vw, 60px);
     margin: 0;
     color: white;;
     font-size: 1rem;
     font-family: "PixelFont";
 }
 .h-button{
-    position: absolute;
     display: flex;
     outline:none;
     border: none;  
     
+    margin-left: 20rem;
     top: 20px;
     right: 50px;
-    width: 8rem;
-    height: 8%;
-    max-height: 70px;
-    padding: 10px 20px;
+    width: 10rem;
+    height: 3rem;
 
     cursor: pointer;
     justify-content: center;
@@ -78,4 +69,27 @@ h3{
 }
 .h-button:active {
     background-image: url("./imgs/header_button_active.png");
+}
+.nav-links {
+    display: flex;
+    gap: 40px;
+}
+
+.nav-links a {
+    display: inline-block;
+    transition: transform 0.2s ease, color 0.2s ease;
+    color: white;
+    text-decoration: underline;
+    font-size: 1.2rem;
+    font-family: "PixelFont";
+}
+
+.nav-links a:hover {
+    transform: scale(1.3);
+    text-decoration: none;
+}
+
+.nav-links a:active {
+    color: black;
+    transform: scale(1.2);
 }
